--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ background-size: cover;
     </header>
     <div class="main">
         <div class="container py-5">
-            <h1 class="display-5 fw-bold text-center mb-4">가나안 기도방 4기</h1>
+            <h1 class="display-5 fw-bold text-center mb-4">가나안 기도방</h1>
 			<p id="bible" class="col-md-5 fs-4 text-center mx-auto mb-5">아무 것도 염려하지 말고 오직 모든 일에 기도와 간구로, 너희 구할 것을 감사함으로 하나님께 아뢰라 그리하면 모든 지각에 뛰어난 하나님의 평강이 그리스도 예수 안에서 너희 마음과 생각을 지키시리라 (빌 4:6~7)</p>
 
             <button id="startPrayerBtn" type="button" class="btn btn-outline-light">기도 시작</button>
